plugins {
    id 'org.springframework.boot' version '4.0.2'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
    id 'jacoco'
    id 'org.sonarqube' version '7.2.2.6593'
}

group = 'uk.nhs.prm.repo'
version = '0.0.1-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

sourceSets {
    integration {
        compileClasspath += sourceSets.main.output
        runtimeClasspath += sourceSets.main.output
        compileClasspath += sourceSets.test.output
        runtimeClasspath += sourceSets.test.output
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    implementation.exclude module: 'activemq-broker'

    integrationImplementation.extendsFrom testImplementation
    integrationRuntimeClasspath.extendsFrom testRuntimeClasspath
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-activemq'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    implementation('io.netty:netty-buffer') { version { strictly '4.2.9.Final' } }
    implementation('io.netty:netty-codec') { version { strictly '4.2.9.Final' } }
    implementation('io.netty:netty-codec-http') { version { strictly '4.2.9.Final' } }
    implementation('io.netty:netty-codec-http2') { version { strictly '4.2.9.Final' } }
    implementation('io.netty:netty-common') { version { strictly '4.2.9.Final' } }
    implementation('io.netty:netty-handler') { version { strictly '4.2.9.Final' } }
    implementation('io.netty:netty-resolver') { version { strictly '4.2.9.Final' } }
    implementation('io.netty:netty-transport') { version { strictly '4.2.9.Final' } }
    implementation('io.netty:netty-transport-classes-epoll') { version { strictly '4.2.9.Final' } }
    implementation('io.netty:netty-transport-native-unix-common') { version { strictly '4.2.9.Final' } }

    implementation 'org.yaml:snakeyaml:2.5'
    implementation 'net.logstash.logback:logstash-logback-encoder:9.0'
    implementation 'com.sun.mail:jakarta.mail:2.0.2'
    implementation 'com.google.code.gson:gson:2.13.2'
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.4'
    implementation 'org.apache.qpid:proton-j:0.34.1'

    implementation platform('tools.jackson:jackson-bom:3.0.4')
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'

    implementation platform('software.amazon.awssdk:bom:2.41.14')
    implementation 'software.amazon.awssdk:cloudwatch'
    implementation 'software.amazon.awssdk:sns'
    implementation 'software.amazon.awssdk:sqs'
    implementation 'software.amazon.awssdk:s3'
    implementation 'software.amazon.awssdk:dynamodb'

    implementation 'com.amazonaws:amazon-sqs-java-extended-client-lib:2.1.2'
    implementation 'com.amazonaws:amazon-sqs-java-messaging-lib:2.1.4'
    implementation 'software.amazon.payloadoffloading:payloadoffloading-common:2.1.0'

    compileOnly 'org.projectlombok:lombok:1.18.42'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.hamcrest:hamcrest:3.0'
    testImplementation(platform('org.junit:junit-bom:6.0.2'))
    testImplementation('org.junit.jupiter:junit-jupiter')
    testImplementation 'commons-fileupload:commons-fileupload:1.6.0'
    testImplementation 'org.wiremock:wiremock-standalone:3.13.2'
    testImplementation 'com.google.guava:guava:33.5.0-jre'
    testImplementation 'org.awaitility:awaitility:4.3.0'

    integrationImplementation 'com.swiftmq:swiftmq-client:13.2.0'
}

test {
    useJUnitPlatform()
    outputs.upToDateWhen { false }
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

task integration(type: Test) {
    testClassesDirs = sourceSets.integration.output.classesDirs
    classpath = sourceSets.integration.runtimeClasspath
    mustRunAfter tasks.test
    outputs.upToDateWhen { false }
    systemProperty "javax.xml.parsers.SAXParserFactory", "com.sun.org.apache.xerces.internal.jaxp.SAXParserFactoryImpl"
}

jacocoTestReport {
    dependsOn test // tests are required to run before generating the report
    shouldRunAfter integration
}

jacocoTestCoverageVerification {
    dependsOn jacocoTestReport
}

sonar {
    properties {
        property 'sonar.projectKey', 'NHSDigital_orphaned-record-continuity'
        property 'sonar.organization', 'nhsdigital'
        property 'sonar.host.url', 'https://sonarcloud.io'
    }
}
